debut de preparation a la mise en prod

--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,10 @@
             <button class="try-premium-btn">
                 <span class="icon">✨</span> Essayer Premium
             </button>
+            <button class="subscribe-premium-btn">
+                <span class="icon">⭐</span> S'abonner à Premium
+                <span class="price">4.99€/mois</span>
+            </button>
         </div>
 
         <h1>Comment allez-vous aujourd'hui ?</h1>
@@ -81,15 +85,9 @@
             <span class="icon">📊</span>
             Statistiques
         </button>
-        <div class="premium-section">
-            <button class="premium-features-btn">
-                <span class="icon">✨</span>
-                Premium
-            </button>
-            <p class="premium-note">Accédez à des insights détaillés et plus encore</p>
-        </div>
     </div>
     <script type="module" src="js/popup.js"></script>
     <script type="module" src="js/premium.js"></script>
+    <script src="vendor/stripe.js"></script>
 </body>
 </html> 
